# tutti-ai

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/api/: api.py  router.py
app/db/: connection.py  context.py  queries.py
app/ml/: model_loader.py
app/models/: schemas.py
app/services/: keyword_services.py  model_service.py  review_service.py  sentiment_services.py
object/: sentiment_model.joblib
