[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shop-review"
version = "0.0.2"
description = "네이버 쇼핑 리뷰 데이터를 활용한 한국어 감성 분석 프로젝트"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Boseok Lee", email = "boseok.lee@hotmail.com"}
]
maintainers = [
    {name = "Boseok Lee", email = "boseok.lee@hotmail.com"}
]
keywords = ["sentiment-analysis", "korean-nlp", "fastapi", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi==0.95.0",
    "uvicorn==0.23.1",
    "jinja2==3.1.2",
    "mysql-connector-python==9.1.0",
    "joblib==1.2.0",
    "scikit-learn==1.2.2",
    "numpy==1.23.5",
    "pydantic==1.10.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy>=0.991",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/leeboseok/shop-review"
Repository = "https://github.com/leeboseok/shop-review"
Documentation = "https://github.com/leeboseok/shop-review#readme"
"Bug Tracker" = "https://github.com/leeboseok/shop-review/issues"

[project.scripts]
shop-review = "main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto" 